<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">course</string>
    <string name="hello">Hello World !</string>
    <string name="button">Button</string>
    <string name="forward">Forward</string>
    <string name="activity2_title">Here is Activity2</string>
    <string name="back">Back</string>
    <string name="forward_to_send_msm">Send MSM</string>
    <string name="invalid_dialog_title">Valid Failed</string>
    <string name="ok">OK</string>
    <string name="invalid_field">The value of {0} is invalid,please type into again.</string>
    <string name="forward_to_calculator">Calculator</string>
    <string name="calculator_activity_title">My Calculator</string>
    <string name="calculator_result_activity_title">Calculator Result</string>
    <string name="forward_to_layout_test">Layout Test</string>
    <string name="layout_test">Layout Test</string>
</resources>
